<resources>
    <string name="app_name">UD5Caso1</string>
    <string name="comunidad_autonoma">Comunidad Autonoma</string>
    <string name="borrar">BORRAR</string>
    <string name="recargar">RECARGAR</string>
    <string name="borrarRv">BORRAR</string>
    <string name="editar">EDITAR</string>
    <string name="cambiar">CAMBIAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="comunidades">COMUNIDADES</string>
    <string name="log_in">Log-in</string>
    <string name="correo">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="mapa">MAPA</string>
    <string name="recordar">Recordar</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>