<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Login">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:translationZ="100dp"
        app:layoutDescription="@xml/activity_login_scene"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvSpain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:width="50dp"
            android:height="50dp"
            android:background="@drawable/spain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.motion.widget.MotionLayout>

    <TextView
        android:id="@+id/tvComunidadesLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comunidades"
        android:textColor="@color/morado"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editNombreLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:ems="16"
        android:inputType="textEmailAddress"
        android:hint="@string/correo"
        app:helperText="Correo electrónico"
        app:helperTextTextColor="@color/azul"
        android:autofillHints="emailAddress"
        app:layout_constraintEnd_toEndOf="@+id/tvComunidadesLogin"
        app:layout_constraintStart_toStartOf="@+id/tvComunidadesLogin"
        app:layout_constraintTop_toBottomOf="@+id/tvComunidadesLogin">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editPassLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="16"
        app:helperText="8 caracteres"
        app:helperTextTextColor="@color/azul"
        android:autofillHints="password"
        android:inputType="textPassword"
        app:passwordToggleEnabled="true"
        android:hint="@string/contrase_a"
        app:layout_constraintEnd_toEndOf="@+id/editNombreLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editNombreLogin"
        app:layout_constraintTop_toBottomOf="@+id/editNombreLogin">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="@+id/editPassLogin"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/editPassLogin"
        app:layout_constraintTop_toBottomOf="@+id/editPassLogin" />

    <Switch
        android:id="@+id/stLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/recordar"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>